--- a/Site_institucional/public/Index.html
+++ b/Site_institucional/public/Index.html
@@ -27,7 +27,7 @@
 
             <div class="avatar_index">
                 <a href="login.html">
-                    <img src="../public/assets/gif/avatar.gif" class="avatar_index_foto"> </a>
+                    <img src="./assets/gif/avatar.gif" class="avatar_index_foto"> </a>
 
             </div>
         </div>
