--- a/Site_institucional/public/cadastro.html
+++ b/Site_institucional/public/cadastro.html
@@ -93,6 +93,19 @@
                         <label for="senha" class="placeholder">confirmacaosenha </label>
                     </div>
 
+                    <div class="input-container ic3">
+
+                        <input name="bulbasaur" id="inicial1" class="Inicial_Buba" type="checkbox"/>
+                        <label id="icone2" for="inicial1"><img src="./assets/gif/bulbasaur.gif" style="height: 35px;"></label>
+
+                        <input name="squartle" id="inicial2" class="Inicial_squirtle" type="checkbox"/>
+                        <label id="icone2" for="inicial2"><img src="./assets/gif/squirtle1.gif" style="height: 35px;"></label>
+
+
+                        <input name="charmander" id="inicial3" class="Inicial_Buba" type="checkbox"/>
+                        <label id="icone2" for="inicial3"><img src="./assets/gif/charmander3.gif" style="height: 70px;"></label>
+                    </div>
+
                     <button class="submit">Começar</button>
                 </form>
             </div>
