Finalizaçao da tela pokomn com informaçoes

--- a/Site_institucional/public/Index.html
+++ b/Site_institucional/public/Index.html
@@ -100,7 +100,7 @@
                         <div class=content>
                             <h3>Pokémon FireRed</h3>
                             <p>A arte da caixa do Pokémon FireRed mostra o Pokémon Charizard . </p>
-                            <a id="Ver_mais" href="pokemons.html">Ver mais</a>
+                            <a id="Ver_mais" href="./#aquiEstou">Ver mais</a>
                         </div>
                     </div>
 
@@ -111,7 +111,7 @@
                         <div class=content>
                             <h3>Pokémon Yellow</h3>
                             <p>Arte da caixa norte-americana para o Pokémon Yellow mostra o Pokémon Pikachu .</p>
-                            <a id="Ver_mais" href="pokemons.html">Ver mais</a>
+                            <a id="Ver_mais" href="Pokemon.html">Ver mais</a>
                         </div>
 
                     </div>
@@ -124,7 +124,7 @@
                             <h3>Pokémon LeafGreen</h3>
                             <p>Arte da caixa norte-americana para o Pokémon LeafGreen , representando o Pokémon
                                 Venusaur.</p>
-                            <a id="Ver_mais" href="pokemons.html">Ver mais</a>
+                            <a id="Ver_mais" href="Pokemon.html">Ver mais</a>
                         </div>
                     </div>
 
