--- a/Site_institucional/public/Pokemon.html
+++ b/Site_institucional/public/Pokemon.html
@@ -63,27 +63,28 @@
         </nav>
     </div>
 
-    <div class="teste">
 
-        <div class="banner"></div>
-    </div>
+    <!-- Paginas do corpo -->
 
-    <div class="banner1">
 
-    </div>
+    <!-- Foto começo da pagina -->
+    <div class="banner"></div>
 
+    <!-- Div invisivel começo da pagina  -->
+    <div class="banner1"></div>
+
+    <!-- Banner da primera pagina -->
     <div class="banner2">
 
 
         <div class="primeiraPagina">
 
 
-            <div class="P_titulo">
-
-            </div>
+            <div class="P_titulo"></div>
 
 
             <div class="corpo_pg1">
+
 
                 <div class="txt_pg1_01">
                     <p> Se você foi criança no fim da década de 90 ou início dos anos 2000 ou nao mora em uma caverna
@@ -169,24 +170,28 @@
 
                 </div>
 
-            </div>
 
-        </div>
+                <div class="img_pg1_02"></div>
+
+            </div>
 
         </div>
 
     </div>
 
 
-    <div class="banner2">
+
+    <div class="banner3">
 
         <div class="segundaPagina">
 
             <div class="corpo_pg2">
-                <div class="img_pg2_01"></div>
+                <div id="ref_versions" class="img_pg2_01"></div>
                 <div class="txt_pg2_01">
                     <p>
-                        Pokémon Red Version e Pokémon Blue Version são jogos de RPG de 1996desenvolvidos pela Game Freak
+                        <section id="aquiEstou">
+                        Pokémon Red Version e Pokémon Blue Version</section> são jogos de RPG de 1996 desenvolvidos pela Game
+                        Freak
                         e
                         publicados pela Nintendo para o Game Boy . Eles são os primeiros episódios da série de
                         videogames
@@ -203,19 +208,19 @@
                         Japão.</p>
 
                 </div>
-                <div class="txt_pg1_02">
+                <div class="txt_pg2_02">
                     <p>
                         Pokémon Yellow , uma versão aprimorada, foi lançado no Japão em 1998 e em outras regiões em 1999
                         e 2000. Remakes de Red e Green , Pokémon FireRed e LeafGreen , foram lançados para o Game Boy
-                        Advance em
-                        2004.
+                        Advance em 2004.</p>
+                    <p>
                         Vermelho , Azul e Amarelo - além de Green no Japão - foram relançados no serviço Nintendo 3DS
                         Virtual
                         Console em 2016 como uma comemoração do 20º aniversário da franquia.
 
                         O jogador controla o protagonista de uma perspectiva aérea e o conduz por toda a região fictícia
-                        de Kanto em uma missão para dominar a batalha Pokémon .
-
+                        de Kanto em uma missão para dominar a batalha Pokémon .</p>
+                    <p>
                         O objetivo dos jogos é se tornar o campeão da Liga
                         Indigo ao derrotar os oito Líderes de Ginásio e, em seguida, os quatro melhores treinadores
                         Pokémon do país, o Elite Four . Outro objetivo é completar a Pokédex , uma enciclopédia do jogo,
@@ -284,52 +289,86 @@
         </div>
     </div>
 
-    <div class="banner2">
+
+    <div class="banner4">
 
         <div class="TerceiraPagina">
 
             <h1 id="curioso">Curiosidades:</h1>
 
             <div class="corpo_pg3">
-                <div class="txt_pg3_01">
-                
-                <p>
-                Pokémon O Primeiro Filme: Mewtwo Strikes Back é uma 1,998 japonês anime filme  dirigida por
-                Kunihiko Yuyama , o diretor principal do Pokémon série de televisão. É o primeiro lançamento teatral
-                dafranquia Pokémon .</p>
-            <p>
-                Foi lançado pela primeira vez no Japão em 18 de julho de 1998. Em 8 de julho de 1999, uma versão
-                completa do filme foi ao ar na televisão japonesa. Além de um prólogo adicionado, a versão
-                atualizada incluía nova animação e gráficos CGI . A adaptação para o idioma inglês, produzida pela
-                Nintendo e 4Kids Entertainment e licenciada pela Warner Bros. Pictures , foi lançada na América do Norte
-                em 12 de novembro de 1999. Os eventos do filme acontecem durante a primeira temporada de Pokémon: Indigo
-                League .</p>
-            <p>
-                O filme consiste basicamente de três segmentos: As Férias de Pikachu , um longa-metragem de 21 minutos
-                com foco no mascote da série Pikachu ; Origin of Mewtwo , o prólogo de 10 minutos adicionado à versão
-                completa do filme; e Mewtwo Strikes Back , o principal longa-metragem de 75 minutos. No exterior, o
-                prólogo só pode ser visto como um curta bônus em versões em DVD de Pokémon: Mewtwo Returns .
-
-                No Japão, Mewtwo Strikes Back foi recebido positivamente, com elogios direcionados ao impacto emocional
-                do filme e à exploração de tópicos éticos como clonagem, modificação genética e existencialismo. No
-                entanto, a versão em inglês recebeu críticas geralmente negativas dos críticos de cinema, com muitas das
-                críticas apontadas para a dublagem pobre e sua inclusão de uma mensagem antiviolência, apesar de ser um
-                filme Pokémon . Outras críticas retrospectivas da versão em inglês foram direcionadas contra a remoção
-                da maioria dos tópicos éticos, como parte da história de origem de Mewtwo. Apesar das críticas, foi um
-                sucesso de bilheteria em todo o mundo, liderando as paradas de bilheteria em seu fim de semana de
-                estreia e, eventualmente, arrecadando$ 172 milhões na bilheteria mundial. Também vendeu 10 milhões de
-                unidades de vídeo doméstico nos Estados Unidos, incluindo 4,2 milhões de vendas de VHS, que renderam $
-                58,8 milhões em 2000.</p>
-            <p>
-                A versão japonesa de Pokémon: O Primeiro Filme ganhou o Prêmio Kobe de Animação para Cinema Teatral, mas
-                a versão em inglês ganhou duas das cinco indicações ao Prêmio Stinkers (Pior Conquista em Animação e
-                Lançamento Direto para Vídeo Mais Indesejado).
-
-                Durante os créditos finais de Pokémon the Movie: The Power of Us (2018), foi anunciado que um remake e
-                um primeiro CGI completo, Pokémon: Mewtwo Strikes Back — Evolution foi definido para lançamento no ano
-                seguinte. Em dezembro de 2018, a data de lançamento do remake foi revelada como 12 de julho de 2019.
-            </p>
+                <div class="img_pg3_01"></div>
+                <div class="txt_pg3_00">
+                    <p>Se você alguma vez ja viu o primeiro filme da franquia, certamente voce conhece uma das cenas
+                        mais tristes dos desenhos.
+                        Impossivel nao se emocionar vendo pikachu tentar ressuscitar Ash apos ser atingido por MewTwo.
+                    </p>
                 </div>
+                <div class="txt_pg3_01">
+
+                    <p>
+                        Pokémon O Primeiro Filme: Mewtwo Strikes Back é uma 1,998 japonês anime filme dirigida por
+                        Kunihiko Yuyama , o diretor principal do Pokémon série de televisão. É o primeiro lançamento
+                        teatral
+                        dafranquia Pokémon .</p>
+                    <p>
+                        Foi lançado pela primeira vez no Japão em 18 de julho de 1998. Em 8 de julho de 1999, uma versão
+                        completa do filme foi ao ar na televisão japonesa. Além de um prólogo adicionado, a versão
+                        atualizada incluía nova animação e gráficos CGI . A adaptação para o idioma inglês, produzida
+                        pela
+                        Nintendo e 4Kids Entertainment e licenciada pela Warner Bros. Pictures , foi lançada na América
+                        do Norte
+                        em 12 de novembro de 1999. Os eventos do filme acontecem durante a primeira temporada de
+                        Pokémon: Indigo
+                        League .</p>
+                    <p>
+                        O filme consiste basicamente de três segmentos: As Férias de Pikachu , um longa-metragem de 21
+                        minutos
+                        com foco no mascote da série Pikachu ; Origin of Mewtwo , o prólogo de 10 minutos adicionado à
+                        versão
+                        completa do filme; e Mewtwo Strikes Back , o principal longa-metragem de 75 minutos. No
+                        exterior, o
+                        prólogo só pode ser visto como um curta bônus em versões em DVD de Pokémon: Mewtwo Returns .
+
+                        No Japão, Mewtwo Strikes Back foi recebido positivamente, com elogios direcionados ao impacto
+                        emocional
+                        do filme e à exploração de tópicos éticos como clonagem, modificação genética e existencialismo.
+                        No
+                        entanto, a versão em inglês recebeu críticas geralmente negativas dos críticos de cinema, com
+                        muitas das
+                        críticas apontadas para a dublagem pobre e sua inclusão de uma mensagem antiviolência, apesar de
+                        ser um
+                        filme Pokémon . Outras críticas retrospectivas da versão em inglês foram direcionadas contra a
+                        remoção
+                        da maioria dos tópicos éticos, como parte da história de origem de Mewtwo. Apesar das críticas,
+                        foi um
+                        sucesso de bilheteria em todo o mundo, liderando as paradas de bilheteria em seu fim de semana
+                        de
+                        estreia e, eventualmente, arrecadando$ 172 milhões na bilheteria mundial. Também vendeu 10
+                        milhões de
+                        unidades de vídeo doméstico nos Estados Unidos, incluindo 4,2 milhões de vendas de VHS, que
+                        renderam $
+                        58,8 milhões em 2000.</p>
+                    <p>
+                        A versão japonesa de Pokémon: O Primeiro Filme ganhou o Prêmio Kobe de Animação para Cinema
+                        Teatral, mas
+                        a versão em inglês ganhou duas das cinco indicações ao Prêmio Stinkers (Pior Conquista em
+                        Animação e
+                        Lançamento Direto para Vídeo Mais Indesejado).
+
+                        Durante os créditos finais de Pokémon the Movie: The Power of Us (2018), foi anunciado que um
+                        remake e
+                        um primeiro CGI completo, Pokémon: Mewtwo Strikes Back — Evolution foi definido para lançamento
+                        no ano
+                        seguinte. Em dezembro de 2018, a data de lançamento do remake foi revelada como 12 de julho de
+                        2019.
+                    </p>
+
+                    <p> <u> Assista aqui mesmo o trailer desse primeiro filme:</u></p>
+                </div>
+
+
+
                 <div class="trailer">
 
                     <iframe width="560" height="315" src="https://www.youtube.com/embed/egDYQSUEsHg"
@@ -338,26 +377,32 @@
                         allowfullscreen></iframe>
                 </div>
 
-
-
-
+                <div class="txt_pg3_02">
+                    <p>O filme foi tanto sucesso que ate hoje e comentado e ganhou recentemente uma remasterização feito por ninguem menos que a a netflix. 
+                        Marcado para 2021. Da uma olhadinha no treiler. </p>
+                </div>
 
                 <div class="trailer2">
-
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/D0zYJ1RQ-fs"
+                    
+                    <iframe width="560" height="315"  src="https://www.youtube.com/embed/D0zYJ1RQ-fs"
                         title="YouTube video player" frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen></iframe>
                 </div>
 
+
+                <div class="txt_pg3_03">
+                    <p>O filme foi tanto sucesso que ate hoje e comentado e ganhou recentemente uma remasterização feito por ninguem menos que a a netflix. 
+                        Marcado para 2021. Da uma olhadinha no treiler. </p>
+                </div>
 
 
                 <div class="trailer3">
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/2-d_PruYR5Q"
-                        title="YouTube video player" frameborder="0"
-                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                        allowfullscreen></iframe>
-                </div>
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/2-d_PruYR5Q"
+                            title="YouTube video player" frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen></iframe>
+                    </div>
 
             </div>
 
