Tela do usuario, gameboy na tela e botoes

--- a/Site_institucional/public/Pokemon.html
+++ b/Site_institucional/public/Pokemon.html
@@ -189,23 +189,24 @@
                 <div id="ref_versions" class="img_pg2_01"></div>
                 <div class="txt_pg2_01">
                     <p>
-                        <section id="aquiEstou">
-                        Pokémon Red Version e Pokémon Blue Version</section> são jogos de RPG de 1996 desenvolvidos pela Game
-                        Freak
-                        e
-                        publicados pela Nintendo para o Game Boy . Eles são os primeiros episódios da série de
-                        videogames
-                        Pokémon .
-                        Eles foram lançados pela primeira vez no Japão em 1996 como Pocket Monsters: Red e Pocket
-                        Monsters:
-                        Green , com a edição especial Pocket Monsters: Blue sendo lançada no Japão no final do mesmo
-                        ano. Os
-                        jogos foram lançados posteriormente como Pokémon Red e Pokémon Bluena América do Norte e
-                        Austrália
-                        em 1998 e
-                        na Europa em 1999. Pokémon Red e Pokémon Blue combinaram Red / Green / Blue para lançamento fora
-                        do
-                        Japão.</p>
+                    <section id="aquiEstou"></section>
+                        Pokémon Red Version e Pokémon Blue Version são jogos de RPG de 1996 desenvolvidos pela
+                    Game
+                    Freak
+                    e
+                    publicados pela Nintendo para o Game Boy . Eles são os primeiros episódios da série de
+                    videogames
+                    Pokémon .
+                    Eles foram lançados pela primeira vez no Japão em 1996 como Pocket Monsters: Red e Pocket
+                    Monsters:
+                    Green , com a edição especial Pocket Monsters: Blue sendo lançada no Japão no final do mesmo
+                    ano. Os
+                    jogos foram lançados posteriormente como Pokémon Red e Pokémon Bluena América do Norte e
+                    Austrália
+                    em 1998 e
+                    na Europa em 1999. Pokémon Red e Pokémon Blue combinaram Red / Green / Blue para lançamento fora
+                    do
+                    Japão.</p>
 
                 </div>
                 <div class="txt_pg2_02">
@@ -378,13 +379,14 @@
                 </div>
 
                 <div class="txt_pg3_02">
-                    <p>O filme foi tanto sucesso que ate hoje e comentado e ganhou recentemente uma remasterização feito por ninguem menos que a a netflix. 
+                    <p>O filme foi tanto sucesso que ate hoje e comentado e ganhou recentemente uma remasterização feito
+                        por ninguem menos que a a netflix.
                         Marcado para 2021. Da uma olhadinha no treiler. </p>
                 </div>
 
                 <div class="trailer2">
-                    
-                    <iframe width="560" height="315"  src="https://www.youtube.com/embed/D0zYJ1RQ-fs"
+
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/D0zYJ1RQ-fs"
                         title="YouTube video player" frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen></iframe>
@@ -392,17 +394,35 @@
 
 
                 <div class="txt_pg3_03">
-                    <p>O filme foi tanto sucesso que ate hoje e comentado e ganhou recentemente uma remasterização feito por ninguem menos que a a netflix. 
+                    <p>O filme foi tanto sucesso que ate hoje e comentado e ganhou recentemente uma remasterização feito
+                        por ninguem menos que a a netflix.
                         Marcado para 2021. Da uma olhadinha no treiler. </p>
                 </div>
 
+                <div class="txt_pg3_04">
+                    <p>E as novidades nao param.
+                        uinta-feira, 02, o The Pokémon Company anunciou Pokémon Evolutions, seu mais novo anime do
+                        universo de Pokémon. Segundo a empresa, o primeiro episódio da produção será lançado no Japão no
+                        dia 09 de setembro.</p>
+                        <p>
+                        Para fazer o anúncio, o The Pokémon Company divulgou o trailer oficial do anime através de sua
+                        conta do Twitter. “Um anime original intitulado Pokémon Evolutions irá comemorar o 25º
+                        aniversário do Pokémon este ano e será lançado no YouTube.
+                        Sua história abrange oito episódios e se passa em cada uma das regiões onde Pokémon apareceu até
+                        agora!”, escreveu na legenda da publicação. </p>
+                </div>
+
+
+
+
+                Q
 
                 <div class="trailer3">
-                        <iframe width="560" height="315" src="https://www.youtube.com/embed/2-d_PruYR5Q"
-                            title="YouTube video player" frameborder="0"
-                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                            allowfullscreen></iframe>
-                    </div>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/2-d_PruYR5Q"
+                        title="YouTube video player" frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
+                </div>
 
             </div>
 
