--- a/Site_institucional/public/Index.html
+++ b/Site_institucional/public/Index.html
@@ -50,16 +50,16 @@
             <a href="cadastro.html">
                 <div class="link">Cadastro</div>
             </a>
-            <a href="pokecards.html">
+            <!-- <a href="pokecards.html">
                 <div class="link">PokeCards</div>
-            </a>
+            </a> -->
             <a href="Pokemon.html">
                 <div class="link">Pokemon</div>
             </a>
 
-            <a href="">
+            <!-- <a href="">
                 <div class="link">Forum</div>
-            </a>
+            </a> -->
         </nav>
     </div>
 
@@ -100,13 +100,13 @@
                         <div class=content>
                             <h3>Pokémon FireRed</h3>
                             <p>A arte da caixa do Pokémon FireRed mostra o Pokémon Charizard . </p>
-                            <a id="Ver_mais" href="./#aquiEstou">Ver mais</a>
+                            <a id="Ver_mais" href="./Pokemon.html">Ver mais</a>
                         </div>
                     </div>
 
                     <div class=card id="card1">
                         <div class=image>
-                            <img id="" href="pokemons.html" src="assets/imgs/yellowVersion.jpg">
+                            <img id="img_version" href="pokemons.html" src="assets/imgs/yellowVersion.jpg">
                         </div>
                         <div class=content>
                             <h3>Pokémon Yellow</h3>
@@ -223,7 +223,7 @@
 
     <div class="footer">
         <div class="container">
-            <h4>Feito com amor por um aluno BandTec &copy; 2021</h4>
+            <h4>Feito com amor e dedicação por um aluno Sptec &copy; 2021</h4>
         </div>
     </div>
 
