--- a/Site_institucional/public/Pokemon.html
+++ b/Site_institucional/public/Pokemon.html
@@ -189,7 +189,7 @@
                 <div id="ref_versions" class="img_pg2_01"></div>
                 <div class="txt_pg2_01">
                     <p>
-                    <section id="aquiEstou"></section>
+                    <!-- <section id="aquiEstou"></section> -->
                         Pokémon Red Version e Pokémon Blue Version são jogos de RPG de 1996 desenvolvidos pela
                     Game
                     Freak
