--- a/Site_institucional/public/dashboard/dashboard.html
+++ b/Site_institucional/public/dashboard/dashboard.html
@@ -17,8 +17,7 @@
 
 </head>
 
-<body>
-    <!-- onload="validarSessao()">   -->
+<body onload="validarSessao()">  
 
     <div class="header">
         <div class="container">
@@ -55,8 +54,8 @@
                 </div>
 
                 <div class="btn-nav">
-                    <a href="">
-                        <h3>Meus Pokemons</h3>
+                    <a href="../Pokemon.html">
+                        <h3>Informação</h3>
                     </a>
                 </div>
 
@@ -75,7 +74,7 @@
         <div class="div_corpo">
 
 
-            <audio controls autoplay style="width: 250px;" src="" id="somm" onclick="midia()" loop></audio>
+            <audio controls autoplay style="width: 250px;" src="Pokemon RubySapphireEmerald- Littleroot Town.mp3" id="somm" onclick="midia()" loop></audio>
 
             <div class="gameBoy">
 
