--- a/Site_institucional/public/login.html
+++ b/Site_institucional/public/login.html
@@ -76,7 +76,7 @@
                     </div>
 
                     <div class="input-container ic2">
-                        <input name="senha" id="senha" class="input" type="text" placeholder=" " />
+                        <input name="senha" id="senha" class="input" type="password" placeholder="*******" />
                         <div class="cut cut-short"></div>
                         <label for="senha" class="placeholder">Senha</label>
                     </div>
