--- a/Site_institucional/public/cadastro.html
+++ b/Site_institucional/public/cadastro.html
@@ -81,7 +81,7 @@
                     </div>
 
                     <div class="input-container ic2">
-                        <input name="senha" id="senha" class="input" type="text" placeholder=" " />
+                        <input name="senha" id="senha" class="input" type="password" placeholder="*******" />
                         <div class="cut cut-short"></div>
                         <label for="senha" class="placeholder">Senha</label>
                     </div>
@@ -91,6 +91,12 @@
                             placeholder=" " />
                         <div class="cut cut-short"></div>
                         <label for="senha" class="placeholder">confirmacaosenha </label>
+                    </div>
+                    <div class="input-container ic2">
+                        <input name="cpf" id="cpf" class="input" type="text"
+                            placeholder=" " />
+                        <div class="cut cut-short"></div>
+                        <label for="cpf" class="placeholder">cpf </label>
                     </div>
 
                     <div class="input-container ic3">
